[package]
name = "fuse"
version = "0.3.0"
authors = ["Andreas Neuhaus <zargony@zargony.com>", "Eric Delanghe <delanghe.eric.dev@gmail.com>"]
description = "Rust library for filesystems in userspace (FUSE)"
documentation = "https://docs.rs/fuse"
homepage = "https://github.com/zargony/rust-fuse"
repository = "https://github.com/zargony/rust-fuse"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings"]
categories = ["api-bindings", "filesystem"]
license = "MIT"

[dependencies]
errno = "0.2.3"
libc = "0.2"
log = "0.3"
time = "0.1"
thread-scoped = "1"
sendfd = "0.1.0"

[dev-dependencies]
env_logger = "0.3"

[lib]
name = "fuse"
path = "src/lib.rs"
